<resources>
    <string name="app_name">BookStoreApp</string>
    <string name="add_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Price</string>
    <string name="product_price_currency">E.G</string>
    <string name="product_quantity">Quantity</string>
    <string name="product_supplier_name">Supplier Name</string>
    <string name="product_supplier_phone_number">Supplier Phone Number</string>
    <string name="supplier_unknown">Unknown</string>
    <string name="action_save">Save</string>
    <string name="inventory_contains">Inventory contains :</string>
    <string name="book_photo">book_photo</string>
    <string name="empty_view_title_text">Your customers are waiting…</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="empty_image">empty image</string>
    <string name="product_info">Product Info:</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="add_to_cart" />
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="book_name">Bilal Novel</string>
    <string name="total">Total:</string>
    <string name="_1">1</string>
    <string name="minus">-</string>
    <string name="quantity">Quantity:</string>
    <string name="supplier">Supplier:</string>
    <string name="someone_example_com">someone@example.com</string>
    <string name="call">call</string>
    <string name="_556668888">556668888</string>
    <string name="mail">mail</string>
    <string name="plus">+</string>
    <string name="email">Email</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="the_novel">Bilal the novel</string>
    <string name="pricebilal">23</string>
    <string name="quantitybilal">1</string>
    <string name="supplier_name">Ibrahim Hassan</string>
    <string name="price_bilal">77</string>
</resources>
