<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bookstoreapp.DetailsActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_details_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/empty_image"
            android:src="@drawable/nobooks" />

        <TextView
            android:id="@+id/textview_details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            tools:text="@string/book_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_details_quantitylable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/quantity"

                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_details_decreasequantity"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:text="@string/minus"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textview_details_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:minWidth="36dp"
                android:text="@string/_1"

                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />

            <Button
                android:id="@+id/button_details_increasequantity"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:text="@string/plus"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_details_totallabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="24dp"
                android:text="@string/total"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textview_details_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_bilal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textview_details_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/product_price_currency" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_details_supplierlable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="10dp"
                android:text="@string/supplier"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textview_details_suppliername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/supplier_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imagebutton_details_emailsupplier"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@null"
                android:contentDescription="@string/mail"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/textview_details_supplieremail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/someone_example_com" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imagebutton_details_callsupplier"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:background="@null"
                android:contentDescription="@string/call"
                android:src="@drawable/ic_call" />


            <TextView
                android:id="@+id/textview_details_supplierphonenumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:text="@string/_556668888" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>