<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_catalog_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/book_photo"
            android:scaleType="fitCenter"
            android:src="@drawable/nobooks" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_catalog_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/the_novel"
            android:textColor="#000"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_catalog_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricebilal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/textview_catalog_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:text="@string/product_price_currency"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:animationCache="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_catalog_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:text="@string/quantitybilal"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_catalog_instock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="@string/product_quantity"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <ImageButton
                android:id="@+id/imagebutton_catalog_addtocart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/add_to_cart"
                android:focusable="false"
                android:src="@drawable/ic_add_shopping_cart" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
